deploy/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geneweaver-api
  labels:
    app: geneweaver-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geneweaver-api
  template:
    metadata:
      labels:
        app: geneweaver-api
    spec:
      serviceAccountName: workload-identity-geneweaver
      containers:
        - name: geneweaver-api
          image: geneweaver-api
          imagePullPolicy: Always
      ports:
          - containerPort: 8000
